--- a/implementation/client/package.json
+++ b/implementation/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "echo \"No build configured.\"",
     "start": "node ./bin/www",
     "test": "jest"
   },
